--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
     "gatsby-plugin-sharp": "^2.0.30",
+    "gatsby-plugin-snipcart": "^1.0.6",
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-source-instagram": "^0.4.0",
     "gatsby-source-wordpress": "^3.0.48",
