--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@reach/dialog": "^0.1.4",
     "gatsby": "^2.2.6",
     "gatsby-background-image": "^0.2.8-alpha4",
     "gatsby-image": "^2.0.29",
