--- a/package.json
+++ b/package.json
@@ -9,11 +9,12 @@
     "gatsby": "^2.2.6",
     "gatsby-background-image": "^0.2.8-alpha4",
     "gatsby-image": "^2.0.29",
+    "gatsby-plugin-favicon": "^3.1.6",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.6",
     "gatsby-plugin-sass": "^2.0.10",
-    "gatsby-plugin-sharp": "^2.0.30",
+    "gatsby-plugin-sharp": "^2.0.32",
     "gatsby-plugin-snipcart": "^1.0.6",
     "gatsby-source-filesystem": "^2.0.27",
     "gatsby-source-instagram": "^0.4.0",
@@ -27,7 +28,8 @@
     "react-geocode": "^0.1.2",
     "react-helmet": "^5.2.0",
     "react-slidedown": "^2.0.9",
-    "sass-loader": "^7.1.0"
+    "sass-loader": "^7.1.0",
+    "typeface-montserrat": "0.0.54"
   },
   "keywords": [
     "gatsby"
