--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby-background-image": "^0.2.8-alpha4",
     "gatsby-image": "^2.0.29",
     "gatsby-plugin-favicon": "^3.1.6",
+    "gatsby-plugin-google-analytics": "^2.0.18",
     "gatsby-plugin-manifest": "^2.0.17",
     "gatsby-plugin-offline": "^2.0.25",
     "gatsby-plugin-react-helmet": "^3.0.6",
@@ -25,6 +26,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
+    "react-ga": "^2.5.7",
     "react-geocode": "^0.1.2",
     "react-helmet": "^5.2.0",
     "react-slidedown": "^2.0.9",
