--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-sass": "^4.11.0",
     "prop-types": "^15.6.2",
     "react": "^16.8.0",
+    "react-datepicker": "^2.5.0",
     "react-dom": "^16.8.0",
     "react-ga": "^2.5.7",
     "react-geocode": "^0.1.2",
