--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-geocode": "^0.1.2",
     "react-helmet": "^5.2.0",
     "react-slidedown": "^2.0.9",
+    "react-toastify": "^5.1.0",
     "sass-loader": "^7.1.0",
     "typeface-montserrat": "0.0.54"
   },
